tests/purs/failing/LeadingZeros2.purs
-- @shouldFailWith ErrorParsingModule
module Main where

import Prelude

x = 00.1
