tests/purs/failing/LeadingZeros2.out
Error found:
at tests/purs/failing/LeadingZeros2.purs:6:6 - 6:7 (line 6, column 6 - line 6, column 7)

  Unable to parse module:
  Unexpected leading zeros


See https://github.com/purescript/documentation/blob/master/errors/ErrorParsingModule.md for more information,
or to contribute content related to this error.

